# ghostwriter

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
ghostwriter/: __init__.py  app.py  device.py  morph.py  morph_service.py  render.py  server.py  web.py
ghostwriter/templates/: editor.html  gallery.html  login.html
