[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostwriter"
version = "0.1.0"
description = "Morph poems through word-embedding arithmetic and render ghosted PDFs for e-ink"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "textual>=0.80",
    "gensim>=4.3",
    "reportlab>=4.0",
    "dpt-rp1-py>=0.1.16",
    "nltk>=3.8",
    "lemminflect>=0.2.3",
]

[project.scripts]
ghostwriter = "ghostwriter.app:main"

[tool.setuptools.packages.find]
include = ["ghostwriter*"]
